# OperatorTest

qop-exp/qop-exp/: README.md  pyproject.toml
qop-exp/qop-exp/configs/backends/: noisysim.yaml  statesim.yaml  wukong72.yaml
qop-exp/qop-exp/configs/datasets/: deep_subset.yaml  sift1m.yaml  tpch_sf01.yaml
qop-exp/qop-exp/configs/experiments/: exp01_tpch_qfilter_vs_scan.yaml  exp02_ann_qcand_vs_bruteforce.yaml  exp03_selectivity_ae_vs_mc.yaml
qop-exp/qop-exp/configs/kernels/: qfilter_grover.yaml  qsel_mlae.yaml  qsim_swap.yaml
qop-exp/qop-exp/configs/workloads/: ann_candidate_range.yaml  sel_estimation_ae.yaml  tpch_filter_selectivity.yaml
qop-exp/qop-exp/src/qopexp/: cli.py
qop-exp/qop-exp/src/qopexp/backends/: __init__.py  registry.py  replay_backend.py  sim_backend.py  utils.py  wukong72_backend.py
qop-exp/qop-exp/src/qopexp/baselines/: __init__.py  ann_range_verify.py  ann_range_verify_real.py  registry.py  tpch_parquet_scan_filter.py  tpch_scan_filter.py  utils.py
qop-exp/qop-exp/src/qopexp/compiler/: __init__.py  qasm_analyzer.py  registry.py  simple_compiler.py  utils.py
qop-exp/qop-exp/src/qopexp/contracts/: __init__.py  artifacts.py  enums.py  manifest.py  protocols.py  result_schema.py  validation.py
qop-exp/qop-exp/src/qopexp/datasets/: __init__.py  ann_hdf5_adapter.py  registry.py  tpch_dbgen_adapter.py  utils.py
qop-exp/qop-exp/src/qopexp/evaluator/: __init__.py  registry.py  simple_evaluator.py  table_writer.py  utils.py
qop-exp/qop-exp/src/qopexp/io/: __init__.py  repo.py  (+4 more)
qop-exp/qop-exp/tools/: ci_validate_artifacts.py  pin_env.sh
(+27 files in other folders)
